--- a/script/install
+++ b/script/install
@@ -16,3 +16,4 @@ sudo update-rc.d listen-for-shutdown.sh defaults
 sudo /etc/init.d/listen-for-shutdown.sh start
 
 echo "Shutdown listener installed."
+echo "Go to Pi-Plates.com for complete documentation and more products."
